tests styling to avoid height problems due to the address bar on mobile

--- a/style.css
+++ b/style.css
@@ -1630,6 +1630,17 @@ li[data-datos-topic]::before {
         height: 100%;
     }
 
+    .text-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: initial;
+        overflow: auto;
+        scroll-snap-type: y mandatory;
+    }
+
     .narrative .text-slide-inner-wrapper {
         display: flex;
         flex-direction: column;
